🔨LoFi-ToDo: Add 1 command run #time 15m

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,8 @@
 {
   "type": "module",
+  "scripts": {
+    "dev": "node server.js"
+  },
   "dependencies": {
     "@automerge/automerge": "^2.2.8",
     "@automerge/automerge-repo": "^1.2.1",
